--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 #     https://www.atlassian.com/git/tutorials/saving-changes/gitignore
 
 vendor/
+tests/bootstrap.php
 
 # Node artifact files
 node_modules/
