--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
   "description": "PHP wrapper for the WeCanTrack API",
   "keywords": ["wecantrack", "wct", "php", "api"],
   "type": "library",
-  "homepage": "https://github.com/",
+  "homepage": "https://github.com/vzangloo/wecantrack",
   "license": "MIT",
   "authors": [
     {
@@ -14,7 +14,7 @@
     }
   ],
   "support": {
-    "email": "devops@saleduck.com"
+    "email": "zang@saleduck.com"
   },
   "require": {
     "php": "^7.4|^8",
